k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sistema-ventas-service
  namespace: academiadeia
  labels:
    app: sistema-ventas
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: sistema-ventas
  sessionAffinity: None
